--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MODEL_ID="gemini-2.0-flash-lite"
-GOOGLE_API_KEY
+MODEL_ID="gemini-2.0-flash"
+GOOGLE_API_KEY="AIzaSyAtXLeGZsLE7Ab53DUBRumC8-GfqE_u1vI"
